# MCRAW_Studio

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  THIRD_PARTY_LICENSES.txt  USER_GUIDE.md  VERSIONS.md  configure.bat  github_readme.md  mcraw_render.cpp  motioncam_tools.spec  version.txt
.github/workflows/: build.yml
gui/: motioncam_tools.py  style.qss
lib/: BakedTransform.cpp  ColorPipeline.cpp  Debayer.cpp  Decoder.cpp  Denoise.cpp  ExrWriter.cpp  MovEncoder.cpp  OcioTransform.cpp  Parallel.hpp  RawData.cpp  Trimmer.cpp
lib/include/motioncam/: BakedTransform.hpp  ColorPipeline.hpp  Debayer.hpp  Decoder.hpp  Denoise.hpp  ExrWriter.hpp  MovEncoder.hpp  OcioTransform.hpp  Trimmer.hpp
python/: mcraw_py.cpp
test/: smoke.py
tools/: gen_icon.py
